--- a/.github/workflows/prereleases.yml
+++ b/.github/workflows/prereleases.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         net-version: [6.0.x]
-        platform: [windows, linux, osx]
+        platform: [win, linux, osx]
 
     steps:
     - uses: actions/checkout@v2
