--- a/.github/workflows/prereleases.yml
+++ b/.github/workflows/prereleases.yml
@@ -3,9 +3,12 @@ name: Pre-releases
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**/README.md'
   pull_request:
     branches: [ master ]
-
+    paths-ignore:
+      - '**/README.md'
 jobs:
   build:
     runs-on: ubuntu-latest
