--- a/Clarin/Clarin.csproj
+++ b/Clarin/Clarin.csproj
@@ -4,6 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <StartupObject>Clarin.Program</StartupObject>
+    <AssemblyName>clarin</AssemblyName>
+    <IsPackable>false</IsPackable>
+    <PackageVersion>1.1.0</PackageVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
   </PropertyGroup>
 
 </Project>
