--- a/.github/workflows/prereleases.yml
+++ b/.github/workflows/prereleases.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         net-version: [6.0.x]
         platform: [win, linux, osx]
-        arch: [x64, arm, arm64]
+        arch: [x64, arm, arm64, musl]
         exclude:
           - platform: osx
             arch: [arm, musl]
