--- a/.github/workflows/prereleases.yml
+++ b/.github/workflows/prereleases.yml
@@ -17,12 +17,10 @@ jobs:
       matrix:
         net-version: [6.0.x]
         platform: [win, linux, osx]
-        arch: [x64, arm, arm64, musl]
+        arch: [x64, arm, arm64]
         exclude:
           - platform: osx
-            arch: [arm, musl]
-          - platform: win
-            arch: [musl]
+            arch: arm
 
     steps:
     - uses: actions/checkout@v2
