--- a/Clarin/Clarin.csproj
+++ b/Clarin/Clarin.csproj
@@ -6,8 +6,8 @@
     <StartupObject>Clarin.Program</StartupObject>
     <AssemblyName>clarin</AssemblyName>
     <IsPackable>false</IsPackable>
-    <PackageVersion>1.1.0</PackageVersion>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <AssemblyVersion>1.1.*</AssemblyVersion>
+    <Deterministic>false</Deterministic>
   </PropertyGroup>
 
 </Project>
