--- a/Clarin/Clarin.csproj
+++ b/Clarin/Clarin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -18,5 +18,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IO\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MarkdownSharp" Version="2.0.5" />
   </ItemGroup>
 </Project>
