--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -48,6 +48,7 @@ jobs:
 
   publish-docker:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
