--- a/Clarin/Clarin.csproj
+++ b/Clarin/Clarin.csproj
@@ -15,11 +15,12 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="IO\" />
+    <None Remove="Markdig.Signed" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="IO\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MarkdownSharp" Version="2.0.5" />
+    <PackageReference Include="Markdig.Signed" Version="0.30.2" />
   </ItemGroup>
 </Project>
